Fix alignment issue in mobile

--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -85,10 +85,6 @@ h4 {
   font-style: normal;
 }
 
-.feature-title {
-  padding-right: 8px;
-}
-
 .para-normal {
   font-family: 'OpenSansRegular', sans-serif !important;
   font-size: 14px;
